🪲 fix clipping

--- a/src/components/ui/ProductCard/ProductCard.module.scss
+++ b/src/components/ui/ProductCard/ProductCard.module.scss
@@ -18,7 +18,7 @@ article.card {
     }
 
     section.price {
-      @apply flex items-end;
+      @apply flex items-end -z-[1];
 
       gap: var(--p-level-5);
 
